--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -4,6 +4,7 @@
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
+    max-width: 336px;
     margin: 0;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -21,5 +22,6 @@
         font-size: 14px;
         line-height: 17px;
         text-align: center;
+        max-width: 282px;
     }
 }
